@@ -540,7 +540,7 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,229,71,10
 END
 
-IDD_MEM_VIEWER DIALOG DISCARDABLE  0, 0, 380, 171
+IDD_MEM_VIEWER DIALOG DISCARDABLE  0, 0, 380, 178
 STYLE WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Memory viewer"
 FONT 8, "MS Sans Serif"
@@ -558,10 +558,16 @@ BEGIN
     DEFPUSHBUTTON   "&Go",IDC_GO,323,7,50,14,WS_GROUP
     CONTROL         "Viewer",IDC_VIEWER,"VbaMemoryViewer",WS_TABSTOP,7,22,
                     366,112
-    PUSHBUTTON      "&Refresh",IDC_REFRESH,117,150,50,14
-    PUSHBUTTON      "&Close",IDC_CLOSE,181,150,50,14
     CONTROL         "Automatic update",IDC_AUTO_UPDATE,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,7,139,71,10
+    PUSHBUTTON      "&Refresh",IDC_REFRESH,67,157,50,14
+    PUSHBUTTON      "&Load...",IDC_LOAD,132,157,50,14
+    PUSHBUTTON      "&Save...",IDC_SAVE,197,157,50,14
+    PUSHBUTTON      "&Close",IDC_CLOSE,262,157,50,14
+    LTEXT           "Current address:",IDC_CURRENT_ADDRESS_LABEL,210,142,77,
+                    8
+    EDITTEXT        IDC_CURRENT_ADDRESS,291,139,82,14,ES_RIGHT | 
+                    ES_AUTOHSCROLL | WS_DISABLED
 END
 
 IDD_OAM_VIEW DIALOG DISCARDABLE  0, 0, 234, 185
@@ -844,6 +850,19 @@ BEGIN
     LTEXT           "Notes:",IDC_STATIC,7,48,60,8
 END
 
+IDD_ADDR_SIZE DIALOG DISCARDABLE  0, 0, 186, 67
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Enter address and size"
+FONT 8, "MS Sans Serif"
+BEGIN
+    EDITTEXT        IDC_ADDRESS,99,6,80,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SIZE_CONTROL,99,26,80,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",ID_OK,34,46,50,14
+    PUSHBUTTON      "Cancel",ID_CANCEL,102,46,50,14
+    LTEXT           "Address:",IDC_STATIC,7,11,65,8
+    LTEXT           "Size:",IDC_STATIC,7,29,65,8
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -999,7 +1018,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 373
         TOPMARGIN, 7
-        BOTTOMMARGIN, 164
+        BOTTOMMARGIN, 171
     END
 
     IDD_OAM_VIEW, DIALOG
@@ -1072,6 +1091,14 @@ BEGIN
         RIGHTMARGIN, 241
         TOPMARGIN, 7
         BOTTOMMARGIN, 141
+    END
+
+    IDD_ADDR_SIZE, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 179
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 60
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -1681,6 +1708,8 @@ BEGIN
     IDS_ACK_NOT_RECEIVED    "ACK not received from GDB."
     IDS_ERROR_NOT_GBA_IMAGE "Error: not a GBA image."
     IDS_EEPROM_NOT_SUPPORTED "EEPROM saves cannot be exported."
+    IDS_FILTER_DUMP         "Memory Dump_*.DMP__"
+    IDS_SELECT_DUMP_FILE    "Select dump file name"
 END
 
 #endif    // English (U.S.) resources
